# Wheatear

./: .gitignore  DESIGN.md  PRODUCT.md  index.html
.impeccable/: design.json
UI/: index.html  package.json  (+2 more)
engine/: README.md  export_agent.py  pyproject.toml
engine/docs/: ARCHITECTURE.md  BUILD_PLAN.md  MIGRATION_DESIGN.md
engine/tests/: test_bidirectional.py  test_config.py  test_copilot_deploy_repair.py  test_copilot_studio_importer.py  test_generate_cases.py  test_llm_factory.py  test_map_stage.py  test_model_map.py  test_orchestrate_exporter.py  test_orchestrate_importer.py  test_orchestrate_rest_fidelity.py  test_pipeline_end_to_end.py  test_solution_importer.py  test_source_fetch.py  test_translate_stage.py  test_validate_stage.py  test_wizard_logic.py  test_workflow.py
engine/wheatear/: banner.py  cli.py  config.py  corridors.py  creds.py  errors.py  model_map.py  repair.py  source_fetch.py  wizard.py  workflow.py
engine/wheatear/connectors/: base.py  registry.py
engine/wheatear/connectors/copilot_studio/: api_client.py  auth.py  common.py  deployer.py  exporter.py  importer.py  mcs_yaml_importer.py  pac_client.py  solution_importer.py
engine/wheatear/connectors/copilot_studio/fixtures/sample_agent/: agent.mcs.yaml
engine/wheatear/connectors/orchestrate/: adk_client.py  deployer.py  exporter.py  importer.py  rest_client.py
engine/wheatear/eval/: generate_cases.py
engine/wheatear/ir/: schema.py
engine/wheatear/llm/: anthropic_provider.py  base.py  factory.py  google_provider.py
engine/wheatear/pipeline/: map.py  translate.py  validate.py
(+34 files in other folders)
