[project]
name = "wheatear"
version = "0.1.0"
description = "Migrate AI agents and workflows between orchestration platforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "questionary>=2.0",
    "rich>=13.0",
    "pyfiglet>=1.0",
    "rich-pixels>=3.0",
    "pillow>=10.0",
    "keyring>=24.0",
    "requests>=2.28",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
openai = ["openai>=1.50"]
watsonx = ["ibm-watsonx-ai>=1.1"]
copilot-studio = []   # PAC CLI handles auth; no Python deps needed
dev = ["pytest>=8.0", "vcrpy>=6.0"]

[project.scripts]
wheatear = "wheatear.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wheatear*"]

[tool.setuptools.package-data]
wheatear = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
